Fixed some errors

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           We trust that we will be your go-to one stop shop, providing an easy access to a range of interesting bake
           ware and edibles that fits your bill.
         </p>
-        <a href="#" class="btn btn-primary btn-lg">About Us</a>
-        <a href="#" class="btn btn-primary btn-lg">Products</a>
+        <a href="about.html" class="btn btn-primary btn-lg">About Us</a>
+        <a href="products.html" class="btn btn-primary btn-lg">Products</a>
       </div>
     </header>
 
