--- a/about.html
+++ b/about.html
@@ -30,13 +30,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home
+            <a class="nav-link" href="about.html">About
               <span class="sr-only">(current)</span>
             </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="products.html">Products</a>
@@ -62,7 +62,7 @@
     <!-- Page Features -->
     <div class="row text-center">
 
-      <div class="col-lg-3 col-md-12 mb-4">
+      <div class="col-lg-12 col-md-12 mb-12">
         Quality Baker’s focuses on meeting all the dire requirements of a passionate baker.
         With almost 100+ curate products - from baking ingredients to tools, accessories,
         cake tins, pans, pattern nozzles, cupcake liners, designer muffin cups, variety of
