Added google map

--- a/contact.html
+++ b/contact.html
@@ -65,10 +65,15 @@
                 <!-- <img class="card-img-top" src="https://cdn3.iconfinder.com/data/icons/job-resume/665/12-_Company_adress-512.png" alt=""> -->
                 <div class="card-body">
                     <h4 class="card-title">Address</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse
-                        necessitatibus neque.</p>
+                    <p class="card-text">
+                        Quality Baker's. Shop No 6, Mahalaxmi Arcade, Station Road, Opp Bata Showroom, Kulgaon, Badlapur East - 421 503 Dist : Thane
+                    </p>
                 </div>
             </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4 address">
+            <div id="map"></div>
         </div>
 
         <!-- Page Features -->
@@ -114,7 +119,10 @@
     <!-- Bootstrap core JavaScript -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAq2vfwruN7zRrc0fkAd_5MwJZGT5Sld5k&callback=initMap">
+    </script>
+    <script src="js/site.js"></script>
 </body>
 
 </html>
