--- a/recipes.html
+++ b/recipes.html
@@ -57,14 +57,7 @@
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
       <div>
-        <h1 class="display-3">A Warm Welcome!</h1>
-        <p class="lead">
-          Quality Baker’s focuses on meeting all the dire requirements of a passionate baker.
-          We trust that we will be your go-to one stop shop, providing an easy access to a range of interesting bake
-          ware and edibles that fits your bill.
-        </p>
-        <a href="about.html" class="btn btn-primary btn-lg">About Us</a>
-        <a href="products.html" class="btn btn-primary btn-lg">Products</a>
+        <h1 class="display-3">Recipes</h1>
       </div>
     </header>
 
