--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Quality Bakers</title>
+    <title>Quality Baker's</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/heroic-features.css" rel="stylesheet">
+    <link href="css/site.css" rel="stylesheet">
 
 </head>
 
@@ -23,7 +23,10 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Quality Bakers</a>
+            <a class="navbar-brand" href="index.html">
+                <img src="./img/logo.jpg" class="logo" />
+                Quality Baker's
+              </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -65,15 +68,19 @@
                 <div class="card-body">
                     <h4 class="card-title">Address</h4>
                     <p class="card-text">
-                        Quality Baker's. Shop No 6, Mahalaxmi Arcade, Station Road, Opp Bata Showroom, Kulgaon, Badlapur East - 421 503 Dist : Thane
+                        Quality Baker's. Shop No 6, Mahalaxmi Arcade,
+                        <br />
+                        Station Road, Opp Bata Showroom,
+                        <br />
+                        Kulgaon, Badlapur East - 421 503
                     </p>
                 </div>
             </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 mb-4 address">
+        <!-- <div class="col-lg-3 col-md-6 mb-4 address">
             <div id="map"></div>
-        </div>
+        </div> -->
 
         <!-- Page Features -->
         <div class="row text-center">
@@ -82,9 +89,11 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body">
-                        <h4 class="card-title">Prasad Pallival</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse
-                            necessitatibus neque.</p>
+                        <h4 class="card-title">Priyanka</h4>
+                        <p class="card-text">
+                            <img src="img/whatsapp-icon.jpg" class="whatsapp-icon" />
+                            +91 88503 74402
+                        </p>
                     </div>
                 </div>
             </div>
@@ -92,9 +101,23 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card h-100">
                     <div class="card-body">
-                        <h4 class="card-title">Prasad Pallival</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse
-                            necessitatibus neque.</p>
+                        <h4 class="card-title">Kalpita</h4>
+                        <p class="card-text">
+                            <img src="img/whatsapp-icon.jpg" class="whatsapp-icon" />
+                            +91 99238 73711
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h4 class="card-title">Om</h4>
+                        <p class="card-text">
+                            <img src="img/whatsapp-icon.jpg" class="whatsapp-icon" />
+                            +91 95038 58078
+                        </p>
                     </div>
                 </div>
             </div>
@@ -108,7 +131,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Quality Bakers 2020</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Quality Baker's 2020</p>
         </div>
         <!-- /.container -->
     </footer>
