--- a/about.html
+++ b/about.html
@@ -8,13 +8,13 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Quality Bakers</title>
+  <title>Quality Baker's</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/heroic-features.css" rel="stylesheet">
+  <link href="css/site.css" rel="stylesheet">
 
 </head>
 
@@ -23,7 +23,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Quality Bakers</a>
+      <a class="navbar-brand" href="index.html">
+        <img src="./img/logo.jpg" class="logo" />
+        Quality Baker's
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -60,36 +63,97 @@
     </header>
 
     <!-- Page Features -->
-    <div class="row text-center">
 
-      <div class="col-lg-12 col-md-12 mb-12">
-        Quality Baker’s focuses on meeting all the dire requirements of a passionate baker.
-        With almost 100+ curate products - from baking ingredients to tools, accessories,
-        cake tins, pans, pattern nozzles, cupcake liners, designer muffin cups, variety of
-        silicone moulds, edible decorative, few kitsch and quirky baking stuff - we&#39;ve tried to
-        show all the possible essentials you may need while baking. We trust that we will be
-        your go-to one stop shop, providing an easy access to a range of interesting bake
-        ware and edibles that fits your bill. We are in constant lookout for your
-        baking requirements and ensure that we get our stock updated accordingly.
-        Our product section includes Cake Molds, Double Strawberry Molds, Rectangle
-        Muffin Baking Trays, Non-Stick Silicone Cake Pans, Silicone Muffin Forms and
-        Round Bottom Cake Molds. Apart from this, we offer Rose Cake Molds, Heart Shape
-        Bread Making Molds, Cute Silicone Bear Bake Molds, Round Shaped Cake Molds,
-        Star Form Cups and Heart Shaped Cake Decorations.
-        These products are made from 100% food-grade plastic, which is sourced from the
-        authentic vendors of the market. The offered products are available in different
-        designs, patterns and colours that are suitable for making cakes, muffins, chocolates
-        and breads. Moreover, all our offered products are appreciated for their non-toxicity,
-        ability to withstand adverse temperature conditions and odourless properties.
-        We insist on excellent customer care that assures an unparalleled shopping
-        experience. We encourage you to get in touch with us for any specific requirements
-        and we shall try our best to source it for you. Apart from the wide variety of products,
-        we also offer baking recipes and blogs..
-        Enjoy shopping with us and we hope that your requirements come to an end here.
-        We are quite sure that you&#39;ll love the product ranges that we have handpicked
-        exclusively for you!
 
+    <div class="col-lg-12 col-md-12 mb-12">
+
+      <div class="card h-100">
+        <div class="card-body">
+          <h4 class="card-title card-title-cap">
+            <img src="img/cap.png" class="cap" />
+            Objective
+          </h4>
+          <p class="card-text align-justified">
+            Quality Baker’s focuses on meeting all the dire requirements of a passionate baker.
+            With almost 150+ curate products - from baking ingredients to tools, accessories,
+            cake tins, pans, pattern nozzles, cupcake liners, designer muffin cups, variety of
+            silicone moulds, edible decorative, few kitsch and quirky baking stuff - we&#39;ve tried to
+            show all the possible essentials you may need while baking. We trust that we will be
+            your go-to one stop shop, providing an easy access to a range of interesting bake
+            ware and edibles that fits your bill. We are in constant lookout for your
+            baking requirements and ensure that we get our stock updated accordingly.
+          </p>
+        </div>
       </div>
+
+      <div class="card h-100 about-card">
+        <div class="card-body">
+          <h4 class="card-title card-title-cap">
+            <img src="img/cap.png" class="cap" />
+            We Have
+          </h4>
+          <p class="card-text align-justified">
+            Our product section includes Cake Molds, Double Strawberry Molds, Rectangle
+            Muffin Baking Trays, Non-Stick Silicone Cake Pans, Silicone Muffin Forms and
+            Round Bottom Cake Molds. Apart from this, we offer Rose Cake Molds, Heart Shape
+            Bread Making Molds, Cute Silicone Bear Bake Molds, Round Shaped Cake Molds,
+            Star Form Cups and Heart Shaped Cake Decorations and many more.
+          </p>
+        </div>
+      </div>
+
+      <div class="card h-100 about-card">
+        <div class="card-body">
+          <h4 class="card-title card-title-cap">
+            <img src="img/cap.png" class="cap" />
+            Authentic
+          </h4>
+          <p class="card-text align-justified">
+            These products are made from 100% food-grade plastic, which is sourced from the
+            authentic vendors of the market. The offered products are available in different
+            designs, patterns and colours that are suitable for making cakes, muffins, chocolates
+            and breads. Moreover, all our offered products are appreciated for their non-toxicity,
+            ability to withstand adverse temperature conditions and odourless properties.
+          </p>
+        </div>
+      </div>
+
+      <div class="card h-100 about-card">
+        <div class="card-body">
+          <h4 class="card-title card-title-cap">
+            <img src="img/cap.png" class="cap" />
+            For Key Customers
+          </h4>
+          <p class="card-text align-justified">
+            We insist on excellent customer care that assures an unparalleled shopping
+            experience. We encourage you to get in touch with us for any specific requirements
+            and we shall try our best to source it for you. Apart from the wide variety of products,
+            we also offer baking recipes and blogs..
+          </p>
+        </div>
+      </div>
+
+      <div class="card h-100 about-card">
+        <div class="card-body">
+          <h4 class="card-title card-title-cap">
+            <img src="img/cap.png" class="cap" />
+            Everything you need
+          </h4>
+          <p class="card-text align-justified">
+            Enjoy shopping with us and we hope that your requirements come to an end here.
+            We are quite sure that you&#39;ll love the product ranges that we have handpicked
+            exclusively for you!
+
+            <br /><br />
+            Happy Baking!
+
+            <br /><br />
+            Quality Baker’s Team
+            <br />
+          </p>
+        </div>
+      </div>
+
       <!-- /.row -->
 
     </div>
@@ -98,7 +162,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Quality Bakers 2020</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Quality Baker's 2020</p>
       </div>
       <!-- /.container -->
     </footer>
