--- a/products.html
+++ b/products.html
@@ -8,13 +8,13 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Quality Bakers</title>
+  <title>Quality Baker's</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/heroic-features.css" rel="stylesheet">
+  <link href="css/site.css" rel="stylesheet">
 
 </head>
 
@@ -23,7 +23,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Quality Bakers</a>
+      <a class="navbar-brand" href="index.html">
+        <img src="./img/logo.jpg" class="logo" />
+        Quality Baker's
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -327,7 +330,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Quality Bakers 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Quality Baker's 2020</p>
     </div>
     <!-- /.container -->
   </footer>
