--- a/recipes.html
+++ b/recipes.html
@@ -8,13 +8,13 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Quality Bakers</title>
+  <title>Quality Baker's</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/heroic-features.css" rel="stylesheet">
+  <link href="css/site.css" rel="stylesheet">
 
 </head>
 
@@ -23,7 +23,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Quality Bakers</a>
+      <a class="navbar-brand" href="index.html">
+        <img src="./img/logo.jpg" class="logo" />
+        Quality Baker's
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -64,55 +67,51 @@
     <!-- Page Features -->
     <div class="row text-center">
 
-      <div class="col-lg-3 col-md-6 mb-4">
+      <div class="col-lg-6 col-md-12 mb-12 recipes">
         <div class="card h-100">
-          <img class="card-img-top" src="img/IMG-20200718-WA0004.jpg" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-          </div>
-          <div class="card-footer">
-            <a href="products.html" class="btn btn-primary">See All Products!</a>
-          </div>
+          <img class="card-img-top" src="img/recipes/1.jpg" alt="">
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-6 mb-4">
+      <div class="col-lg-6 col-md-12 mb-12 recipes">
         <div class="card h-100">
-          <img class="card-img-top" src="img/IMG-20200719-WA0004.jpg" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
-          </div>
-          <div class="card-footer">
-            <a href="products.html" class="btn btn-primary">See All Products!</a>
-          </div>
+          <img class="card-img-top" src="img/recipes/2.jpg" alt="">
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-6 mb-4">
+      <div class="col-lg-6 col-md-12 mb-12 recipes">
         <div class="card h-100">
-          <img class="card-img-top" src="img/IMG-20200719-WA0005.jpg" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-          </div>
-          <div class="card-footer">
-            <a href="products.html" class="btn btn-primary">See All Products!</a>
-          </div>
+          <img class="card-img-top" src="img/recipes/3.jpg" alt="">
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-6 mb-4">
+      <div class="col-lg-6 col-md-12 mb-12 recipes">
         <div class="card h-100">
-          <img class="card-img-top" src="img/IMG-20200719-WA0006.jpg" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
-          </div>
-          <div class="card-footer">
-            <a href="products.html" class="btn btn-primary">See All Products!</a>
-          </div>
+          <img class="card-img-top" src="img/recipes/4.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="col-lg-6 col-md-12 mb-12 recipes">
+        <div class="card h-100">
+          <img class="card-img-top" src="img/recipes/5.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="col-lg-6 col-md-12 mb-12 recipes">
+        <div class="card h-100">
+          <img class="card-img-top" src="img/recipes/6.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="col-lg-6 col-md-12 mb-12 recipes">
+        <div class="card h-100">
+          <img class="card-img-top" src="img/recipes/7.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="col-lg-6 col-md-12 mb-12 recipes">
+        <div class="card h-100">
+          <img class="card-img-top" src="img/recipes/8.jpg" alt="">
         </div>
       </div>
 
@@ -125,7 +124,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Quality Bakers 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Quality Baker's 2020</p>
     </div>
     <!-- /.container -->
   </footer>
