--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/site.css" rel="stylesheet">
+    <link href="css/site.css?v=1.0" rel="stylesheet">
 
 </head>
 
