--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,9 @@
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="recipes.html">Recipes</a>
+                    </li>
                 </ul>
             </div>
         </div>
