--- a/products.html
+++ b/products.html
@@ -48,6 +48,9 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="recipes.html">Recipes</a>
+          </li>
         </ul>
       </div>
     </div>
