Added whatsapp link

--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,10 @@
                         <h4 class="card-title">Priyanka</h4>
                         <p class="card-text">
                             <img src="img/whatsapp-icon.jpg" class="whatsapp-icon" />
-                            +91 88503 74402
+                            <a href="https://wa.me/918850374402">
+                                +91 88503 74402
+                            </a>
+                            
                         </p>
                     </div>
                 </div>
@@ -107,7 +110,9 @@
                         <h4 class="card-title">Kalpita</h4>
                         <p class="card-text">
                             <img src="img/whatsapp-icon.jpg" class="whatsapp-icon" />
-                            +91 99238 73711
+                            <a href="https://wa.me/919923873711">
+                                +91 99238 73711
+                            </a>
                         </p>
                     </div>
                 </div>
@@ -119,7 +124,9 @@
                         <h4 class="card-title">Om</h4>
                         <p class="card-text">
                             <img src="img/whatsapp-icon.jpg" class="whatsapp-icon" />
-                            +91 95038 58078
+                            <a href="https://wa.me/919503858078">
+                                +91 95038 58078
+                            </a>
                         </p>
                     </div>
                 </div>
