--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/site.css?v=1.0" rel="stylesheet">
+  <link href="css/site.css?v=1.1" rel="stylesheet">
 
 </head>
 
@@ -45,10 +45,10 @@
             <a class="nav-link" href="products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="recipes.html">Recipes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="recipes.html">Recipes</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -56,7 +56,7 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="container about-us">
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
