--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
           <img class="card-img-top" src="img/Cupcake Molds & Wrappers.jpeg" alt="">
           <div class="card-body">
           <h4 class="card-title">
-            Cupcake Molds & Wrappers
+            Cupcake Moulds & Wrappers
           </h4>
           <p class="card-text">
-            Baking cup cake muffin liners Package included differrent shapes of cup cake. These Cupcake Cases with high quality ,and color will not fade perfect for kitchen baking ,birthday party,wedding party decorations. These cupcake cases great for kitchen baking ,wedding and brithday decorations.
+            Baking cupcake muffin liners Package included different shapes of cupcake. These Cupcake Cases with high quality ,and color will not fade perfect for kitchen baking ,birthday party,wedding party decorations. These cupcake cases are great for kitchen baking ,wedding and birthday decorations.
           </p>
           </div>
           <div class="card-footer">
