--- a/products.html
+++ b/products.html
@@ -74,7 +74,7 @@
           <img class="card-img-top" src="img/Sprinkels.jpg" alt="">
           <div class="card-body">
           <h4 class="card-title">
-            Sprinkels	
+            Sprinkles	
           </h4>
           <p class="card-text">
             Sprinkles, sugar strands, jimmies, vermicelli are very small pieces of confectionery used as a decoration or to add texture to desserts such as brownies, cupcakes, doughnuts or on ice cream
@@ -118,7 +118,7 @@
           <img class="card-img-top" src="img/Measuring Cups.jpeg" alt="">
           <div class="card-body">
           <h4 class="card-title">
-            Measuing Cups
+            Measuring Cups
           </h4>
           <p class="card-text">
             This set of 5 Cooking Measuring Spoons contains 5 different sizes for easy identification. Spoons show amounts in both standard & metric measurements. The included lock strap keeps the spoons together and organized for easy storage. Made of durable shock-resistant ABS plastic. Dishwasher safe. Included sizes are: 1/2 tbsp. (7.5ml), 1 tbsp. (15ml), 1/4cup (60ml), 1/3cup (85ml), 1/2cup (125ml), 1cup (250ml). 
@@ -195,10 +195,10 @@
           <img class="card-img-top" src="img/Cupcake Molds & Wrappers.jpeg" alt="">
           <div class="card-body">
           <h4 class="card-title">
-            Cupcake Molds & Wrappers
+            Cupcake Moulds & Wrappers
           </h4>
           <p class="card-text">
-            Baking cup cake muffin liners Package included differrent shapes of cup cake. These Cupcake Cases with high quality ,and color will not fade perfect for kitchen baking ,birthday party,wedding party decorations. These cupcake cases great for kitchen baking ,wedding and brithday decorations.
+            Baking cupcake muffin liners Package included different shapes of cupcake. These Cupcake Cases with high quality ,and color will not fade perfect for kitchen baking ,birthday party,wedding party decorations. These cupcake cases are great for kitchen baking ,wedding and birthday decorations.
           </p>
           </div>
         </div>
@@ -258,7 +258,7 @@
             white compound chocolate
           </h4>
           <p class="card-text">
-            This compound choclate is widely used in making various kinds of candies, cake dressings, desserts, cookies                 
+            This compound chocolate is widely used in making various kinds of candies, cake dressings, desserts, cookies                 
                       </p>
           </div>
         </div>
